--- a/dex/Cargo.toml
+++ b/dex/Cargo.toml
@@ -16,21 +16,21 @@ default = ["program"]
 no-entrypoint = []
 
 [dependencies]
-anchor-lang = "=0.29.0"
-solana-program = "1.10.41"
+anchor-lang = "0.30.1"
+solana-program = "2.2.1"
 solana-security-txt = "1.0.2"
-spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
+spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
 serde = "1.0.150"
-itertools = "0.10.5"
+itertools = "0.14.0"
 without-alloc = "0.2.2"
-num_enum = "0.5.7"
+num_enum = "0.7.3"
 static_assertions = "1.1.0"
 bincode = "1.3.3"
-enumflags2 = "0.6.4"
+enumflags2 = "0.7.11"
 field-offset = "0.3.4"
-thiserror = "1.0.37"
+thiserror = "2.0.11"
 safe-transmute = "0.11.2"
-arbitrary = { version = "0.4.7", features = ["derive"], optional = true }
+arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
 num-traits = "0.2.15"
 arrayref = "0.3.6"
 bytemuck = "1.12.3"
@@ -41,10 +41,10 @@ default-env = "0.1.1"
 crate-type = ["cdylib", "lib"]
 
 [dev-dependencies]
-rand = "0.7.3"
+rand = "0.9.0"
 hexdump = "0.1.0"
 proptest = "1.0.0"
-proptest-derive = "0.3.0"
+proptest-derive = "0.5.1"
 bumpalo = { version = "3.4.0", features = ["collections"] }
 
 [profile.release]
